# Roadef_challenge_2026

./: CMakeLists.txt  Heuristic.cpp  Heuristic.h  main.cpp  readerInstance.cpp  readerInstance.h  utilities.cpp
challenge-roadef-2026-main/checker/src/: helpers.h  types.h
networktools-main/networktools/core/: arrays.h
